<resources>
    <string name="app_name">疫苗預約平台APP</string>
    <string name="title_eduinfo">衛教資訊</string>
    <string name="title_home">首頁</string>
    <string name="title_login">登入</string>
    <string name="title_news">疫情資訊</string>
    <string name="title_reserve">疫苗預約</string>
    <string name="title_setting">設定</string>
    <string name="title_signup">會員註冊</string>
    <string name="title_temprec">體溫紀錄</string>
    <string name="toolbar_up_cancel">Cancel</string>
    <string name="toolbar_up_setting">Setting</string>
    <string name="toolbar_up_add">Add</string>
    <string name="text_home_title">VA Care</string>
    <string name="text_home_hint_email">YOUR EMAIL</string>
    <string name="text_home_hint_password">YOUR PASSWORD</string>
    <string name="text_home_login">登入</string>
    <string name="text_home_signup">Sign up</string>
    <string name="text_signup_hint_email">電子郵件</string>
    <string name="text_signup_hint_password">密碼</string>
    <string name="text_signup_hint_password_again">再次輸入密碼</string>
    <string name="text_signup_hint_name">姓名</string>
    <string name="text_signup_hint_phonenumber">電話</string>
    <string name="text_signup_hint_address">居住地</string>
    <string name="text_signup_register">註冊</string>
    <string name="text_home_news">疫情資訊</string>
    <string name="text_home_reserve">疫苗預約</string>
    <string name="text_home_eduinfo">衛教資訊</string>
    <string name="text_home_temprec">體溫紀錄</string>
    <string name="text_setting_title_account">帳戶設定</string>
    <string name="text_setting_edit">編輯個人資料</string>
    <string name="text_setting_changepassword">修改密碼</string>
    <string name="text_setting_notification">通知設定</string>
    <string name="text_setting_title_more">更多</string>
    <string name="text_setting_aboutus">關於我們</string>
    <string name="text_setting_private">隱私政策</string>
    <string name="text_setting_condition">條款和條件</string>
    <string name="text_setting_username">VA SU</string>
    <string name="text_temprec_serach">Search</string>
    <string name="text_alert_addtemp">新增體溫紀錄</string>
    <string name="text_alert_add">新增</string>
    <string name="text_alert_cancle">取消</string>
    <string name="_45_0_c">45.0 °C</string>
    <string name="_30_0_c">30.0 °C</string>
    <string name="date">日期</string>
    <string name="test_date_time">Oct 12, 20 21</string>
    <string name="hour_test">7</string>
    <string name="time_mid">:</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="time_test">45</string>
    <string name="video_text">防疫大作戰-打完疫苗後 還是要做好防疫(張厚台醫師，國語)</string>
    <string name="video_text_much">防疫大作戰-打完疫苗後 還是要做好防疫(張厚台醫師，國語)防疫大作戰-打完疫苗後 還是要做好防疫(張厚台醫師，國語)防疫大作戰-打完疫苗後 還是要做好防疫(張厚台醫師，國語)防疫大作戰-打完疫苗後 還是要做好防疫(張厚台醫師，國語)防疫大作戰-打完疫苗後 還是要做好防疫(張厚台醫師，國語)防疫大作戰-打完疫苗後 還是要做好防疫(張厚台醫師，國語)</string>
    <string name="personal_id">身分證字號</string>
    <string name="reserve">預約</string>
    <string name="vaccine_type">疫苗種類</string>
    <string name="vaccine_az">AZ</string>
    <string name="vaccine_bnt">BNT</string>
    <string name="vaccine_moderna">莫德納</string>
    <string name="vaccine_mvc">高端</string>
    <string name="nofaction_month_time">2021 – 9</string>
    <string name="nofaction_date">11</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="empty">Empty</string>
    <string name="yyyy_mm_dd">yyyy/mm/dd</string>
    <string name="test_text">測試內容測試內容測試內容測試內容測試內容測試內容測試內容測試內容測試內容測試內容測試內容測試內容測試內容測試內容測試內容</string>
    <string name="loading">loading…</string>
</resources>