<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <include layout="@layout/toolbar_up"
        android:id="@+id/toolbar_reserve"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="76dp"
        tools:layout_editor_absoluteX="15dp">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/bg_radius_20dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputLayout_reserve_id"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/black"
                    android:hint="@string/personal_id"
                    android:minHeight="48dp"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputLayout_reserve_name"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/black"
                    android:hint="@string/text_signup_hint_name"
                    android:minHeight="48dp"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputLayout_reserve_phonenumber"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/black"
                    android:hint="@string/text_signup_hint_phonenumber"
                    android:minHeight="48dp"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputLayout_address"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/black"
                    android:hint="@string/text_signup_hint_address"
                    android:minHeight="48dp"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_marginTop="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vaccine_type"
                android:layout_gravity="left"
                android:layout_marginStart="15dp"
                tools:ignore="RtlHardcoded" />

            <CheckBox
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vaccine_az"
                android:layout_gravity="left"
                android:layout_marginStart="15dp"
                tools:ignore="RtlHardcoded" />
            <CheckBox
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vaccine_bnt"
                android:layout_gravity="left"
                android:layout_marginStart="15dp"
                tools:ignore="RtlHardcoded" />
            <CheckBox
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vaccine_moderna"
                android:layout_gravity="left"
                android:layout_marginStart="15dp"
                tools:ignore="RtlHardcoded" />
            <CheckBox
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vaccine_mvc"
                android:layout_gravity="left"
                android:layout_marginStart="15dp"
                tools:ignore="RtlHardcoded" />

            <Button
                android:id="@+id/button_reserve"
                android:layout_width="65dp"
                android:layout_height="48dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="50dp"
                android:background="@drawable/bg_radius_10dp"
                android:backgroundTint="@color/purple_500"
                android:text="@string/reserve"
                android:textColor="@color/white" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>