<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/widget_item"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_height="110dp"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@color/white"
    android:padding="10dp">

    <TextView
        android:id="@+id/item_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yyyy_mm_dd"
        android:textColor="@color/gray" />

    <TextView
        android:id="@+id/item_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="80dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/test_text"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/item_image"
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:layout_alignParentEnd="true"
        android:layout_gravity="right"
        android:contentDescription="@string/text_signup_register"
        tools:ignore="RtlHardcoded" />

</RelativeLayout>