<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_up" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="?attr/actionBarSize"
        tools:layout_editor_absoluteX="15dp">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/bg_radius_20dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputLayout_email"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:backgroundTint="@color/black"
                android:fontFamily="sans-serif-light"
                android:hint="@string/text_signup_hint_email"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                app:hintEnabled="true" />
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputLayout_password"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/black"
                android:fontFamily="sans-serif-light"
                android:hint="@string/text_signup_hint_password"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                app:hintEnabled="true" />
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputLayout_password_again"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/black"
                android:fontFamily="sans-serif-light"
                android:hint="@string/text_signup_hint_password_again"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                app:hintEnabled="true" />
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputLayout_name"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/black"
                android:fontFamily="sans-serif-light"
                android:hint="@string/text_signup_hint_name"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                app:hintEnabled="true" />
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputLayout_phonenumber"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/black"
                android:fontFamily="sans-serif-light"
                android:hint="@string/text_signup_hint_phonenumber"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                app:hintEnabled="true" />
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputLayout_address"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/black"
                android:fontFamily="sans-serif-light"
                android:hint="@string/text_signup_hint_address"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                app:hintEnabled="true" />
            <Button
                android:id="@+id/button_register"
                android:layout_width="65dp"
                android:layout_height="40dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="50dp"
                android:background="@drawable/bg_radius_10dp"
                android:backgroundTint="@color/purple_500"
                android:text="@string/text_signup_register"
                android:textColor="@color/white" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>