<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/news_time_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nofaction_month_time" />

            <TextView
                android:id="@+id/news_time_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/nofaction_date"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:background="@color/gray" />

        <TextView
            android:id="@+id/news_title"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:ellipsize="end"
            android:fontFamily="sans-serif-black"
            android:maxLines="2"
            android:padding="10dp"
            android:text="@string/video_text_much"
            android:textColor="@color/black"
            android:textSize="15sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>